feat(Rest API): :white_check_mark: updated updated controllers to utilise new endpoint requests from RemoteUserAccess